[package]
name = "torrent_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.17", features = ["multipart"]}
tokio = {version = "*", features = ["full"]}
serde ={version = "1.0.147", features = ["derive"]}
serde_bencode = "0.2.3"
futures = "0.3.25"